# BankingWidgetServer

./: .gitignore  LICENSE  README.md  pyproject.toml
htmlcov/: index.html
src/: decorators.py  generators.py  masks.py  processing.py  widget.py
tests/: conftest.py  test_decorators.py  test_generators.py  test_masks.py  test_processing.py  test_widget.py
